# MaxroTracker

./: .gitignore  MaxroTracker_codex_brief.md  README.md  pyproject.toml
docs/: implementation_plan.md
maxro_tracker/: __init__.py
maxro_tracker/db/: __init__.py  repositories.py  schema.py
maxro_tracker/db/migrations/: 001_initial_schema.sql
maxro_tracker/db/seeds/: 001_public_demo_data.sql
maxro_tracker/domain/: __init__.py  models.py
maxro_tracker/services/: __init__.py  macro_calculator.py  tracker.py  weight_trend.py
tests/: test_database_schema.py  test_macro_calculator.py  test_repositories.py  test_tracker_service.py  test_weight_trend.py
